do not reject existing dirs